Ver 1.20.4 Recover and dying to task