@@ -2,15 +2,16 @@ package expendablesoil.expendablesoil;
 
 import expendablesoil.expendablesoil.commands.CommandManager;
 import expendablesoil.expendablesoil.listeners.ChunkListener;
-import expendablesoil.expendablesoil.listeners.PlayerListener;
-import expendablesoil.expendablesoil.listeners.WorldListener;
 
+import expendablesoil.expendablesoil.listeners.PlayerListener;
+import expendablesoil.expendablesoil.listeners.WorldManager;
 import org.bukkit.Bukkit;
 import org.bukkit.configuration.file.FileConfiguration;
 import org.bukkit.plugin.java.JavaPlugin;
 
 import java.io.File;
 import java.util.Arrays;
+import java.util.List;
 import java.util.Objects;
 
 
@@ -25,8 +26,10 @@ public final class ExpendableSoil extends JavaPlugin {
         if (!file.exists()) this.saveDefaultConfig();
         Config = ExpendableSoil.getPlugin(ExpendableSoil.class).getConfig();
 
-        for (var listener : Arrays.asList(new ChunkListener(), new WorldListener(), new PlayerListener()))
+        for (var listener : List.of(new ChunkListener(), new PlayerListener()))
             Bukkit.getPluginManager().registerEvents(listener, this);
+
+        WorldManager.chunkRecover();
 
         System.out.print("[ExpendableSoil] Events registered...");
 
